--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,17 +113,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
-MRUItem1=/Game/Levels/TP3_YourName_Level01
-MRUItem2=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem3=/Game/Levels/TP3_YourName_Level02
-MRUItem4=/Game/Levels/TP3_YourName_Level03
+MRUItem0=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem1=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem2=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem3=/Game/Levels/TP3_YourName_Level01
+MRUItem4=/Game/Levels/TP3_YourName_Level02
+MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -143,7 +144,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/TP3_YourName_Level01
+LastLevel=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
 
 [MessageLog]
 LastLogListing=PIE
@@ -152,15 +153,21 @@ LastLogListing=PIE
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem1=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem2=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem3=/Game/Levels/TP3_YourName_Level02
-MRUItem4=/Game/Levels/TP3_YourName_Level01
-MRUItem5=/Game/Levels/TP3_YourName_Level03
-MRUItem6=/Game/SideScrollerBP/Blueprints/CanonC
-MRUItem7=/Game/SideScrollerBP/Blueprints/ProjectileS
-MRUItem8=/Game/Material/Ennemi_MAT
+MRUItem0=/Game/SideScrollerBP/Blueprints/CanonLVL2
+MRUItem1=/Game/Art/Materials/CrateMaterial
+MRUItem2=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
+MRUItem3=/Game/SideScrollerBP/Blueprints/CanonS
+MRUItem4=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem5=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem6=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem7=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem8=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem9=/Game/Levels/TP3_YourName_Level02
+MRUItem10=/Game/Levels/TP3_YourName_Level01
+MRUItem11=/Game/Levels/TP3_YourName_Level03
+MRUItem12=/Game/SideScrollerBP/Blueprints/CanonC
+MRUItem13=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem14=/Game/Material/Ennemi_MAT
 
 [DetailCategories]
 SwitchToLevel03_C.Tick=True
@@ -435,6 +442,29 @@ SceneComponent.Tags=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SwitchToLevel02_C.Tick=True
+CanonS_C.Cooking=True
+CanonS_C.Tick=True
+ObjectProperty.Variable=True
+ObjectProperty.Events=True
+EdGraph.Graph=True
+ProjectileLVL2_C.Tick=True
+ProjectileLVL2_C.Rendering=True
+ProjectileLVL2_C.Replication=True
+ProjectileLVL2_C.Collision=True
+ProjectileLVL2_C.Input=True
+ProjectileLVL2_C.Actor=True
+ProjectileLVL2_C.TransformCommon=True
+CanonLVL2_C.Tick=True
+CanonLVL2_C.Rendering=True
+CanonLVL2_C.Replication=True
+CanonLVL2_C.Collision=True
+CanonLVL2_C.Input=True
+CanonLVL2_C.Actor=True
+CanonS_C.LOD=True
+CanonLVL2_C.TransformCommon=True
+StaticMeshActor.Surface Materials=True
+StaticMeshActor.Geometry=True
+StaticMeshActor.Surface Properties=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Maps/SwitchToLevel03.SwitchToLevel03=1
@@ -442,6 +472,10 @@ SwitchToLevel02_C.Tick=True
 /Game/SideScrollerBP/Blueprints/ProjectileS.ProjectileS=1
 /Game/SideScrollerBP/Blueprints/CanonC.CanonC=1
 /Game/SideScrollerBP/Maps/SwitchToLevel02.SwitchToLevel02=1
+/Game/SideScrollerBP/Blueprints/CanonS.CanonS=1
+/Game/SideScrollerBP/Blueprints/ProjectileLVL2.ProjectileLVL2=1
+/Game/SideScrollerBP/Blueprints/CanonLVL2.CanonLVL2=1
+/Game/Art/Materials/CrateMaterial.CrateMaterial=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -457,8 +491,8 @@ Object=
 ExtrudeCoordsWarning=False
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1283.000 Y=723.000
+ScreenPosition=X=375.200 Y=187.200
+WindowSize=X=1288.000 Y=728.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -486,11 +520,11 @@ FourPanes2x2.Viewport 2.bIsMaximized=True
 FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Chris/Documents/GitHub/TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
+UNR=../../../../../../Users/frech/OneDrive/Documents/GitHub/TP3_FrechetteRouleauHarvey_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
 BRUSH=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBX=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBXAnim=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
-GenericImport=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
+GenericImport=../../../../../../Users/frech/Downloads/1_store.jpg
 GenericExport=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 GenericOpen=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 GenericSave=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
@@ -1217,17 +1251,20 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileLVL2.ProjectileLVL2;
+RecentlyPlaced=/Game/Art/Materials/CrateMaterial.CrateMaterial;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonLVL2.CanonLVL2;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileS.ProjectileS;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonS.CanonS;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonC.CanonC;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileC.ProjectileC;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ZoneTrap.ZoneTrap;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileS.ProjectileS;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/SideScrollerBP/Meshes/CubeMaterial.CubeMaterial;
 RecentlyPlaced=/Game/SideScrollerBP/Meshes/Ramp_Mesh.Ramp_Mesh;
 RecentlyPlaced=/Game/Material/Ennemi_MAT.Ennemi_MAT;
