MF - Debut texturing Level 2
Debut texturing Level 2

--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,6 @@ MaterialQualityLevel=1
 PreviewFeatureLevel=3
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -123,7 +122,7 @@ MRUItem4=/Game/Levels/TP3_YourName_Level02
 MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Art/Textures/RedbrickTexture
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -155,21 +154,22 @@ LastLogListing=PIE
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem1=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem2=/Game/SideScrollerBP/Blueprints/CanonLVL2
-MRUItem3=/Game/Art/Materials/CrateMaterial
-MRUItem4=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
-MRUItem5=/Game/SideScrollerBP/Blueprints/CanonS
-MRUItem6=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
-MRUItem7=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem8=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem9=/Game/Levels/TP3_YourName_Level02
-MRUItem10=/Game/Levels/TP3_YourName_Level01
-MRUItem11=/Game/Levels/TP3_YourName_Level03
-MRUItem12=/Game/SideScrollerBP/Blueprints/CanonC
-MRUItem13=/Game/SideScrollerBP/Blueprints/ProjectileS
-MRUItem14=/Game/Material/Ennemi_MAT
+MRUItem0=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial
+MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem2=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem3=/Game/SideScrollerBP/Blueprints/CanonLVL2
+MRUItem4=/Game/Art/Materials/CrateMaterial
+MRUItem5=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
+MRUItem6=/Game/SideScrollerBP/Blueprints/CanonS
+MRUItem7=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem8=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem9=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem10=/Game/Levels/TP3_YourName_Level02
+MRUItem11=/Game/Levels/TP3_YourName_Level01
+MRUItem12=/Game/Levels/TP3_YourName_Level03
+MRUItem13=/Game/SideScrollerBP/Blueprints/CanonC
+MRUItem14=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem15=/Game/Material/Ennemi_MAT
 
 [DetailCategories]
 SwitchToLevel03_C.Tick=True
@@ -478,6 +478,7 @@ StaticMeshActor.Surface Properties=True
 /Game/SideScrollerBP/Blueprints/ProjectileLVL2.ProjectileLVL2=1
 /Game/SideScrollerBP/Blueprints/CanonLVL2.CanonLVL2=1
 /Game/Art/Materials/CrateMaterial.CrateMaterial=1
+/Game/Art/Textures/RedbrickTexture/RedbrickMaterial.RedbrickMaterial=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -494,7 +495,7 @@ ExtrudeCoordsWarning=False
 
 [RootWindow]
 ScreenPosition=X=375.200 Y=187.200
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1253,6 +1254,13 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial.RedbrickMaterial;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-rough.redbricks2b-rough;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-normal.redbricks2b-normal;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-metalness.redbricks2b-metalness;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-height4b.redbricks2b-height4b;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-ao.redbricks2b-ao;
+RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-albedo.redbricks2b-albedo;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileLVL2.ProjectileLVL2;
 RecentlyPlaced=/Game/Art/Materials/CrateMaterial.CrateMaterial;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1266,12 +1274,6 @@ RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
-RecentlyPlaced=/Game/StarterContent/Materials/M_Glass.M_Glass;
-RecentlyPlaced=/Game/SideScrollerBP/Meshes/CubeMaterial.CubeMaterial;
-RecentlyPlaced=/Game/SideScrollerBP/Meshes/Ramp_Mesh.Ramp_Mesh;
-RecentlyPlaced=/Game/Material/Ennemi_MAT.Ennemi_MAT;
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 
 [MaterialEditor]
 PrimType=1
