MF - Avancement Texturing Level 2
Avancement Texturing Level 2

--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -122,7 +122,7 @@ MRUItem4=/Game/Levels/TP3_YourName_Level02
 MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Art/Textures/RedbrickTexture
+ContentBrowserTab1.SelectedPaths=/Game/Art/Materials
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -154,22 +154,25 @@ LastLogListing=PIE
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial
-MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem2=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem3=/Game/SideScrollerBP/Blueprints/CanonLVL2
-MRUItem4=/Game/Art/Materials/CrateMaterial
-MRUItem5=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
-MRUItem6=/Game/SideScrollerBP/Blueprints/CanonS
-MRUItem7=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
-MRUItem8=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem9=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem10=/Game/Levels/TP3_YourName_Level02
-MRUItem11=/Game/Levels/TP3_YourName_Level01
-MRUItem12=/Game/Levels/TP3_YourName_Level03
-MRUItem13=/Game/SideScrollerBP/Blueprints/CanonC
-MRUItem14=/Game/SideScrollerBP/Blueprints/ProjectileS
-MRUItem15=/Game/Material/Ennemi_MAT
+MRUItem0=/Game/Art/Textures/OldPlankTexture/OldPlankMaterial
+MRUItem1=/Game/Art/Textures/GreybrickTexture/GraybrickMaterial
+MRUItem2=/Game/Art/Textures/GreybrickTexture/gray-bricks1-albedo
+MRUItem3=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem4=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial
+MRUItem5=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem6=/Game/SideScrollerBP/Blueprints/CanonLVL2
+MRUItem7=/Game/Art/Materials/CrateMaterial
+MRUItem8=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
+MRUItem9=/Game/SideScrollerBP/Blueprints/CanonS
+MRUItem10=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem11=/Game/SideScrollerBP/Maps/SwitchToLevel02
+MRUItem12=/Game/SideScrollerBP/Maps/SwitchToLevel03
+MRUItem13=/Game/Levels/TP3_YourName_Level02
+MRUItem14=/Game/Levels/TP3_YourName_Level01
+MRUItem15=/Game/Levels/TP3_YourName_Level03
+MRUItem16=/Game/SideScrollerBP/Blueprints/CanonC
+MRUItem17=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem18=/Game/Material/Ennemi_MAT
 
 [DetailCategories]
 SwitchToLevel03_C.Tick=True
@@ -467,6 +470,19 @@ CanonLVL2_C.TransformCommon=True
 StaticMeshActor.Surface Materials=True
 StaticMeshActor.Geometry=True
 StaticMeshActor.Surface Properties=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+MaterialExpressionReroute.MaterialExpression=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+MaterialExpressionDesaturation.MaterialExpressionDesaturation=True
+MaterialExpressionDesaturation.MaterialExpression=True
+MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
+MaterialExpressionTextureCoordinate.MaterialExpression=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Maps/SwitchToLevel03.SwitchToLevel03=1
@@ -479,6 +495,10 @@ StaticMeshActor.Surface Properties=True
 /Game/SideScrollerBP/Blueprints/CanonLVL2.CanonLVL2=1
 /Game/Art/Materials/CrateMaterial.CrateMaterial=1
 /Game/Art/Textures/RedbrickTexture/RedbrickMaterial.RedbrickMaterial=1
+/Game/Art/Textures/GreybrickTexture/GraybrickMaterial.GraybrickMaterial=1
+/Game/Art/Textures/GreybrickTexture/gray-bricks1-albedo.gray-bricks1-albedo=1
+/Game/Art/Materials/GraybrickMaterial.GraybrickMaterial=1
+/Game/Art/Textures/OldPlankTexture/OldPlankMaterial.OldPlankMaterial=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -495,7 +515,7 @@ ExtrudeCoordsWarning=False
 
 [RootWindow]
 ScreenPosition=X=375.200 Y=187.200
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1243,6 +1263,8 @@ BlueprintGraph.TimeStamp=2020.09.27-07.11.58
 BlueprintGraph.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2020.09.27-07.12.37
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2020.09.24-23.55.05
+TextureEditor.LastCompileMethod=Unknown
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1254,7 +1276,9 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial.RedbrickMaterial;
+RecentlyPlaced=/Game/Art/Materials/RedbrickMaterial.RedbrickMaterial;
+RecentlyPlaced=/Game/Art/Materials/OldPlankMaterial.OldPlankMaterial;
+RecentlyPlaced=/Game/Art/Materials/GraybrickMaterial.GraybrickMaterial;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-rough.redbricks2b-rough;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-normal.redbricks2b-normal;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-metalness.redbricks2b-metalness;
@@ -1272,8 +1296,6 @@ RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileC.ProjectileC;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ZoneTrap.ZoneTrap;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeTrap.SpikeTrap;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallBack.SpikeWallBack;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SpikeWallFace.SpikeWallFace;
 
 [MaterialEditor]
 PrimType=1
