CH - Ajout des textures et modification du Level 1

--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -114,15 +114,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport3",ConfigSettin
 CurrentScalingGridSize=5
 
 [MRU]
-MRUItem0=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem1=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem2=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem0=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem2=/Game/Levels/TP3_RouleauJacob_GrandHorloger
 MRUItem3=/Game/Levels/TP3_YourName_Level01
 MRUItem4=/Game/Levels/TP3_YourName_Level02
 MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -145,7 +145,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+LastLevel=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
 
 [MessageLog]
 LastLogListing=PIE
@@ -154,26 +154,26 @@ LastLogListing=PIE
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Art/Textures/Floorboard/FloorboardMaterial
-MRUItem1=/Game/Art/Materials/Mirror
-MRUItem2=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem3=/Game/Art/Textures/OldPlankTexture/OldPlankMaterial
-MRUItem4=/Game/Art/Textures/GreybrickTexture/GraybrickMaterial
-MRUItem5=/Game/Art/Textures/GreybrickTexture/gray-bricks1-albedo
-MRUItem6=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial
-MRUItem7=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem8=/Game/SideScrollerBP/Blueprints/CanonLVL2
-MRUItem9=/Game/Art/Materials/CrateMaterial
-MRUItem10=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
-MRUItem11=/Game/SideScrollerBP/Blueprints/CanonS
-MRUItem12=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
-MRUItem13=/Game/SideScrollerBP/Maps/SwitchToLevel02
-MRUItem14=/Game/SideScrollerBP/Maps/SwitchToLevel03
-MRUItem15=/Game/Levels/TP3_YourName_Level02
-MRUItem16=/Game/Levels/TP3_YourName_Level01
-MRUItem17=/Game/Levels/TP3_YourName_Level03
-MRUItem18=/Game/SideScrollerBP/Blueprints/CanonC
-MRUItem19=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem0=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem2=/Game/SideScrollerBP/Blueprints/ProjectileC
+MRUItem3=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem4=/Game/Art/Materials/Trash2
+MRUItem5=/Game/SideScrollerBP/Meshes/DangerMaterial
+MRUItem6=/Game/Material/Ennemi_MAT
+MRUItem7=/Game/Material/RED_Ennemi
+MRUItem8=/Game/Art/Materials/GraybrickMaterial
+MRUItem9=/Game/Art/Materials/Black
+MRUItem10=/Game/Art/Materials/NewMaterial
+MRUItem11=/Game/Art/Textures/Floorboard/FloorboardMaterial
+MRUItem12=/Game/Art/Materials/Mirror
+MRUItem13=/Game/Art/Textures/OldPlankTexture/OldPlankMaterial
+MRUItem14=/Game/Art/Textures/GreybrickTexture/GraybrickMaterial
+MRUItem15=/Game/Art/Textures/GreybrickTexture/gray-bricks1-albedo
+MRUItem16=/Game/Art/Textures/RedbrickTexture/RedbrickMaterial
+MRUItem17=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem18=/Game/SideScrollerBP/Blueprints/CanonLVL2
+MRUItem19=/Game/Art/Materials/CrateMaterial
 
 [DetailCategories]
 SwitchToLevel03_C.Tick=True
@@ -186,9 +186,9 @@ Brush.TransformCommon=True
 Brush.Surface Materials=True
 Brush.Geometry=True
 Brush.Surface Properties=True
-Brush.Lighting=True
-Brush.Physics=True
-Brush.VirtualTexture=True
+Brush.Lighting=False
+Brush.Physics=False
+Brush.VirtualTexture=False
 Brush.BrushSettings=True
 Brush.Tags=True
 Brush.Activation=True
@@ -496,6 +496,26 @@ MaterialExpressionScalarParameter.CustomPrimitiveData=True
 StaticMeshActor.MaterialParameters=True
 StaticMeshActor.HLOD=True
 StaticMeshActor.Mobile=True
+WorldSettings.AI=True
+WorldSettings.LOD=True
+WorldSettings.Cooking=True
+BP_Sky_Sphere_C.LOD=True
+BP_Sky_Sphere_C.Cooking=True
+MaterialExpressionTextureObject.MaterialExpressionTextureBase=True
+MaterialExpressionTextureObject.MaterialExpression=True
+ProjectileC_C.Tick=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BoxComponent.Variable=True
+BoxComponent.Sockets=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.Sockets=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Maps/SwitchToLevel03.SwitchToLevel03=1
@@ -514,6 +534,10 @@ StaticMeshActor.Mobile=True
 /Game/Art/Textures/OldPlankTexture/OldPlankMaterial.OldPlankMaterial=1
 /Game/Art/Materials/Mirror.Mirror=1
 /Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne.TP3_MathieuFrechette_GratteCielAbandonne:PersistentLevel.BoxBrush107=1
+/Game/Material/RED_Ennemi.RED_Ennemi=1
+/Game/SideScrollerBP/Meshes/DangerMaterial.DangerMaterial=1
+/Game/SideScrollerBP/Blueprints/ProjectileC.ProjectileC=1
+/Game/Art/Materials/Trash2.Trash2=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -524,13 +548,16 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit=
 GeomModifier=
 Object=
-StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
+BP_Sky_Sphere_C="\"Object.Override settings.Zenith Color\" \"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
 
 [RootWindow]
-ScreenPosition=X=375.200 Y=187.200
+ScreenPosition=X=375.000 Y=187.000
 WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
@@ -559,7 +586,7 @@ FourPanes2x2.Viewport 2.bIsMaximized=True
 FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/frech/OneDrive/Documents/GitHub/TP3_FrechetteRouleauHarvey_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
+UNR=../../../../../../Users/Chris/Documents/GitHub/TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
 BRUSH=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBX=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBXAnim=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
@@ -1292,12 +1319,17 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
-RecentlyPlaced=/Game/Art/Materials/OldPlankMaterial.OldPlankMaterial;
-RecentlyPlaced=/Game/Art/Materials/FloorboardMaterial.FloorboardMaterial;
+RecentlyPlaced=/Game/Art/Materials/Trash2.Trash2;
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Art/Materials/GraybrickMaterial.GraybrickMaterial;
+RecentlyPlaced=/Game/Art/Materials/TrashMaterial.TrashMaterial;
+RecentlyPlaced=/Game/Art/Materials/Trash.Trash;
 RecentlyPlaced=/Game/Art/Materials/Mirror.Mirror;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Art/Materials/OldPlankMaterial.OldPlankMaterial;
+RecentlyPlaced=/Game/Art/Materials/FloorboardMaterial.FloorboardMaterial;
 RecentlyPlaced=/Game/Art/Materials/RedbrickMaterial.RedbrickMaterial;
-RecentlyPlaced=/Game/Art/Materials/GraybrickMaterial.GraybrickMaterial;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-rough.redbricks2b-rough;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-normal.redbricks2b-normal;
 RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-metalness.redbricks2b-metalness;
@@ -1307,11 +1339,6 @@ RecentlyPlaced=/Game/Art/Textures/RedbrickTexture/redbricks2b-albedo.redbricks2b
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileLVL2.ProjectileLVL2;
 RecentlyPlaced=/Game/Art/Materials/CrateMaterial.CrateMaterial;
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonLVL2.CanonLVL2;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileS.ProjectileS;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonS.CanonS;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/CanonC.CanonC;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ProjectileC.ProjectileC;
-RecentlyPlaced=/Game/SideScrollerBP/Blueprints/ZoneTrap.ZoneTrap;
 
 [MaterialEditor]
 PrimType=1
@@ -1372,9 +1399,12 @@ bMaterialQualityUsed[2]=0
 [DetailCategoriesAdvanced]
 Brush.Lighting=True
 Brush.Actor=True
+WorldSettings.Physics=True
+Brush.VirtualTexture=True
 
 [DetailCustomWidgetExpansion]
-StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24.000000
