--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -20,7 +20,6 @@ MaterialQualityLevel=1
 PreviewFeatureLevel=3
 PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=True,ProfileName="")
@@ -122,7 +121,7 @@ MRUItem4=/Game/Levels/TP3_YourName_Level02
 MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Material
+ContentBrowserTab1.SelectedPaths=/Game
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -148,7 +147,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=LightingResults
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -620,7 +619,7 @@ ExtrudeCoordsWarning=False
 
 [RootWindow]
 ScreenPosition=X=373.600 Y=185.600
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1301.600 Y=741.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1383,13 +1382,15 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Material/Beige_MAT.Beige_MAT;
 RecentlyPlaced=/Game/Material/Ennemi_MAT.Ennemi_MAT;
 RecentlyPlaced=/Game/Material/Black_MAT.Black_MAT;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Wall.M_Basic_Wall;
 RecentlyPlaced=/Game/Material/Gris_Mat.Gris_Mat;
 RecentlyPlaced=/Game/Art/Assets/Caisse.Caisse;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Basic_Floor.M_Basic_Floor;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Burnished_Steel.M_Metal_Burnished_Steel;
@@ -1401,8 +1402,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
 RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
-RecentlyPlaced=/Game/Art/Materials/OldPlankMaterial.OldPlankMaterial;
-RecentlyPlaced=/Game/Art/Materials/Mirror.Mirror;
 
 [MaterialEditor]
 PrimType=1
