--- a/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -113,15 +113,15 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 2.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem1=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem0=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
 MRUItem2=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
 MRUItem3=/Game/Levels/TP3_YourName_Level01
 MRUItem4=/Game/Levels/TP3_YourName_Level02
 MRUItem5=/Game/Levels/TP3_YourName_Level03
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -144,7 +144,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+LastLevel=/Game/Levels/TP3_RouleauJacob_GrandHorloger
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -153,26 +153,26 @@ LastLogListing=LightingResults
 CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
-MRUItem1=/Game/Levels/TP3_RouleauJacob_GrandHorloger
-MRUItem2=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
-MRUItem3=/Game/Material/Gris_Mat
-MRUItem4=/Game/Material/Beige_MAT
-MRUItem5=/Game/Material/Black_MAT
-MRUItem6=/Game/Material/Ennemi_MAT
-MRUItem7=/Game/Art/Assets/Aeration_Bouche
-MRUItem8=/Game/Art/Materials/CrateMaterial
-MRUItem9=/Game/SideScrollerBP/Blueprints/Checkpoint
-MRUItem10=/Game/Art/Materials/Water
-MRUItem11=/Game/SideScrollerBP/Blueprints/ProjectileS
-MRUItem12=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
-MRUItem13=/Game/SideScrollerBP/Blueprints/ProjectileC
-MRUItem14=/Game/Art/Materials/Trash2
-MRUItem15=/Game/SideScrollerBP/Meshes/DangerMaterial
-MRUItem16=/Game/Material/RED_Ennemi
-MRUItem17=/Game/Art/Materials/GraybrickMaterial
-MRUItem18=/Game/Art/Materials/Black
-MRUItem19=/Game/Art/Materials/NewMaterial
+MRUItem0=/Game/Levels/TP3_RouleauJacob_GrandHorloger
+MRUItem1=/Game/Levels/TP3_MathieuFrechette_GratteCielAbandonne
+MRUItem2=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter
+MRUItem3=/Game/Levels/TP3_HarveyChristopher_ForetDesDechets
+MRUItem4=/Game/Material/Gris_Mat
+MRUItem5=/Game/Material/Beige_MAT
+MRUItem6=/Game/Material/Black_MAT
+MRUItem7=/Game/Material/Ennemi_MAT
+MRUItem8=/Game/Art/Assets/Aeration_Bouche
+MRUItem9=/Game/Art/Materials/CrateMaterial
+MRUItem10=/Game/SideScrollerBP/Blueprints/Checkpoint
+MRUItem11=/Game/Art/Materials/Water
+MRUItem12=/Game/SideScrollerBP/Blueprints/ProjectileS
+MRUItem13=/Game/SideScrollerBP/Blueprints/ProjectileLVL2
+MRUItem14=/Game/SideScrollerBP/Blueprints/ProjectileC
+MRUItem15=/Game/Art/Materials/Trash2
+MRUItem16=/Game/SideScrollerBP/Meshes/DangerMaterial
+MRUItem17=/Game/Material/RED_Ennemi
+MRUItem18=/Game/Art/Materials/GraybrickMaterial
+MRUItem19=/Game/Art/Materials/Black
 
 [DetailCategories]
 SwitchToLevel03_C.Tick=True
@@ -571,6 +571,20 @@ PointLight.Tags=True
 PointLight.Activation=True
 PointLight.Cooking=True
 PointLight.Actor=True
+SideScrollerCharacter_C.Default=True
+SideScrollerCharacter_C.Tick=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Maps/SwitchToLevel03.SwitchToLevel03=1
@@ -599,6 +613,7 @@ PointLight.Actor=True
 /Game/Material/Black_MAT.Black_MAT=1
 /Game/Material/Beige_MAT.Beige_MAT=1
 /Game/Material/Gris_Mat.Gris_Mat=1
+/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -611,15 +626,15 @@ GeomModifier=
 Object=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 WorldSettings="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
-Info=
+Info="\"Object.World.NavigationSystemConfig\" \"Object.Lightmass.LightmassSettings\" \"Object.Broadphase.BroadphaseSettings\" \"Object.Audio.DefaultReverbSettings\" \"Object.LODSystem.HierarchicalLODSetup\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0]\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].ProxySetting.MaterialSettings\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting\" \"Object.LODSystem.HierarchicalLODSetup.HierarchicalLODSetup[0].MergeSetting.MaterialSettings\" "
 BP_Sky_Sphere_C="\"Object.Override settings.Zenith Color\" \"Object.Override settings.Horizon color\" \"Object.Override settings.Cloud color\" \"Object.Override settings.Overall Color\" "
 
 [SuppressableDialogs]
 ExtrudeCoordsWarning=False
 
 [RootWindow]
-ScreenPosition=X=373.600 Y=185.600
-WindowSize=X=1301.600 Y=741.600
+ScreenPosition=X=373.000 Y=185.000
+WindowSize=X=1301.000 Y=741.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -647,7 +662,7 @@ FourPanes2x2.Viewport 2.bIsMaximized=True
 FourPanes2x2.Viewport 2.MaximizedViewport=FourPanes2x2.Viewport 2.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/frech/OneDrive/Documents/GitHub/TP3_FrechetteRouleauHarvey_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
+UNR=../../../../../../Users/Chris/Documents/GitHub/TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/Levels
 BRUSH=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBX=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
 FBXAnim=../../../../../TP3_FRH_Wonderland/TP3_FrechetteRouleauHarvey_Wonderland 4.24/Content/
@@ -1382,6 +1397,7 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Checkpoint.Checkpoint;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1401,7 +1417,6 @@ RecentlyPlaced=/Game/StarterContent/Materials/M_AssetPlatform.M_AssetPlatform;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
 RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Steel.M_Metal_Steel;
-RecentlyPlaced=/Game/StarterContent/Materials/M_ColorGrid_LowSpec.M_ColorGrid_LowSpec;
 
 [MaterialEditor]
 PrimType=1
